--- a/TodoAPI/appsettings.json
+++ b/TodoAPI/appsettings.json
@@ -4,8 +4,8 @@
       "Default": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SqlExpress;Initial Catalog=TodoAPI;User Id=sa;Password=123;Integrated Security=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-FHU375A;Initial Catalog=TodoAPI;User Id=sa;Password=123;Integrated Security=True"
+    },
   "AllowedHosts": "*"
 }
